--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "dev": "node index.js",
     "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Muhammad-Tayyab-Awan/shop-portable-backend.git"
+  },
   "keywords": [],
-  "author": "",
+  "author": "muhammad-tayyab-awan",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
